Small code font, full-bleed code boxes and other style fixes
Former-commit-id: 59af38fc52cc67f06ea44130801e4abd844e9091

--- a/styles/components/blocks/codeTile.scss
+++ b/styles/components/blocks/codeTile.scss
@@ -1,25 +1,25 @@
 .code-tile {
-    padding: 1em;
     color: $gray-90;
-    border:1px solid $gray-40;
+    border-radius: $rounded-small;
 
-    h1,h2,h3,h4,h5,h6 {
+    .block-code {
+        margin: 0;
+
+        pre.line-numbers {
+            margin: 0;
+            padding: .75rem 1rem;
+            font-size: .8rem;
+        }
+    }
+
+    h1, h2, h3, h4, h5, h6, p {
         margin:0;
-        color:inherit !important;
-        margin-bottom:1em;
-    }
-    p,a {
-        margin-top:1em;
-        color:inherit !important;
-        margin-bottom:.25em;
-    }
+        margin-bottom: .25rem;
+        line-height: 1.2;
 
-    &.featured {
-        background:$gray-70;
-        color:white;
-        border-radius: $rounded-small;
-        border:0;
-        margin-bottom: 1em;
+        & ~ p {
+            position: relative;
+            top: -.5rem;
+        }
     }
-
 }
